# PoliCcalc

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: calculator.c  calculator.h  main.c
tests/: test_calculator.c
